[gd_scene load_steps=7 format=3 uid="uid://sw2lm6jkqb3f"]

[ext_resource type="Script" path="res://assets/scripts/Player.gd" id="1_75t8f"]
[ext_resource type="ArrayMesh" uid="uid://cokfukykge7lv" path="res://assets/models/Ships/RedFighter/RedFighter.obj" id="2_hjpya"]
[ext_resource type="Material" uid="uid://du35nlbvbmif4" path="res://assets/materials/red_ship.tres" id="3_0ncw2"]
[ext_resource type="Texture2D" uid="uid://csoucjtyxo8ef" path="res://assets/sprites/crosshair032.png" id="4_x1511"]

[sub_resource type="BoxShape3D" id="BoxShape3D_68qey"]
size = Vector3(0.909451, 0.190189, 0.648243)

[sub_resource type="BoxShape3D" id="BoxShape3D_xge3j"]
size = Vector3(0.3, 0.3, 0.3)

[node name="Player" type="CharacterBody3D"]
collision_mask = 6
script = ExtResource("1_75t8f")

[node name="Spaceship" type="MeshInstance3D" parent="."]
transform = Transform3D(0.12, 0, 0, 0, 0.12, 0, 0, 0, 0.12, -0.475035, -0.485027, 0.471891)
mesh = ExtResource("2_hjpya")
surface_material_override/0 = ExtResource("3_0ncw2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00516319, 0.00507545, 0.102495)
shape = SubResource("BoxShape3D_68qey")

[node name="Settings" type="Node3D" parent="."]

[node name="Crossair" type="Area3D" parent="Settings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Settings/Crossair"]
shape = SubResource("BoxShape3D_xge3j")

[node name="Sprite3D" type="Sprite3D" parent="Settings/Crossair"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
billboard = 1
double_sided = false
texture = ExtResource("4_x1511")

[node name="Sound" type="AudioStreamPlayer" parent="Settings/Crossair"]

[node name="ShootSpawner" type="Marker3D" parent="Settings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.47993)

[node name="AudioShoot" type="AudioStreamPlayer3D" parent="Settings"]
max_db = -3.0
max_distance = 8.0

[connection signal="area_entered" from="Settings/Crossair" to="." method="_on_crossair_area_entered"]
[connection signal="area_exited" from="Settings/Crossair" to="." method="_on_crossair_area_exited"]
